<resources>
    <string name="app_name">Lab 3</string>
    <string name="enter_name">Enter your name</string>
    <string name="name_hint"></string>
    <string name="next">Next</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_name">Welcome %1$s!</string>
    <string name="thank_you">Thank You</string>
    <string name="dont_call_me_that">Don’t call me that</string>
</resources>
